fix(waybar): icon spacing

--- a/modules/hm/wms/waybar/waybar.css
+++ b/modules/hm/wms/waybar/waybar.css
@@ -62,7 +62,7 @@ window#waybar {
 #bluetooth,
 #network {
   min-width: 12px;
-  margin: 0 8px;
+  margin: 0 4px;
 }
 
 #custom-nix {
